--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vuetify": "^2.4.9"
   },
   "devDependencies": {
+    "@mdi/font": "^5.9.55",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
